fixed color bleed at page end

--- a/trial_1/css/style_copy.css
+++ b/trial_1/css/style_copy.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: transparent;
   -webkit-transition: background-color 0.4s ease-out;
   transition: background-color 0.4s ease-out;
   font-family: font-family: 'Open-Sans', sans-serif;
@@ -15,6 +15,7 @@ body {
   width:90%;
   margin:5%;
   margin-top: 0px;
+  margin-bottom:0px;
 }
 
 .navbar-container{
